fix: 🐛 Reduce gap between columns in 3-column rows

--- a/src/sass/components/_blocks.scss
+++ b/src/sass/components/_blocks.scss
@@ -12,7 +12,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 3.2rem;
+  gap: 2rem;
 
   @include media($tablet) {
     flex-direction: row;
